authorisation server configured and setup

--- a/05-spring-boot-security/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
+++ b/05-spring-boot-security/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
@@ -35,3 +35,43 @@ otel.exporter.otlp.endpoint=${ENV_OTEL_EXPORTER_ENDPOINT:${OPEN_TELEMETRY_EXPORT
 otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OPEN_TELEMETRY_LOGS_ENABLED}}
 otel.instrumentation.micrometer.enabled=${ENV_OTEL_INSTRUMENTATION_ENABLED:${OPEN_TELEMETRY_INSTRUMENTATION_ENABLED}}
 server.tomcat.mbeanregistry.enabled=${OPEN_TELEMETRY_TOMCAT_ENABLED}
+
+
+
+
+##logging.level.org.springframework.security=trace
+##spring.security.user.name=user1
+##spring.security.user.password=password
+##spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-id=messaging-client
+#spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-id=hello-world-ui
+#spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-secret={noop}secret
+#spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-authentication-methods=client_secret_basic
+#spring.security.oauth2.authorizationserver.client.messaging-client.registration.authorization-grant-types=authorization_code, refresh_token, client_credentials
+##spring.security.oauth2.authorizationserver.client.messaging-client.registration.redirect-uris=http://127.0.0.1:8080/login/oauth2/code/messaging-client-oidc, http://127.0.0.1:8080/authorized
+#spring.security.oauth2.authorizationserver.client.messaging-client.registration.redirect-uris=http://127.0.0.1:8283/login/oauth2/code/messaging-client-oidc, http://127.0.0.1:8283/authorized
+##spring.security.oauth2.authorizationserver.client.messaging-client.registration.post-logout-redirect-uris=http://127.0.0.1:8080/logged-out
+#spring.security.oauth2.authorizationserver.client.messaging-client.registration.post-logout-redirect-uris=http://127.0.0.1:8283/signed-out
+#spring.security.oauth2.authorizationserver.client.messaging-client.registration.scopes=openid, profile, message.read, message.write
+#spring.security.oauth2.authorizationserver.client.messaging-client.require-authorization-consent=true
+
+
+#server.port=9000
+#logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.security.oauth2=INFO
+#spring.security.oauth2.authorizationserver.issuer=http://auth-server:9000
+spring.security.oauth2.authorizationserver.issuer=http://auth-server:8299
+#spring.security.oauth2.authorizationserver.client.articles-client.registration.client-id=articles-client
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-id=hello-world-ui
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-secret={noop}secret
+#spring.security.oauth2.authorizationserver.client.articles-client.registration.client-name=Articles Client
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-name=hello-world-ui
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-authentication-methods=client_secret_basic
+#spring.security.oauth2.authorizationserver.client.articles-client.registration.authorization-grant-types=authorization_code, refresh_token
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.authorization-grant-types=authorization_code, refresh_token, client_credentials
+#spring.security.oauth2.authorizationserver.client.articles-client.registration.redirect-uris=http://127.0.0.1:8080/login/oauth2/code/articles-client-oidc, http://127.0.0.1:8080/authorized
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.redirect-uris=http://127.0.0.1:8283/login/oauth2/code/articles-client-oidc, http://127.0.0.1:8283/authorized
+#spring.security.oauth2.authorizationserver.client.articles-client.registration.scopes=openid, articles.read
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.scopes=openid,  profile, calendar.read, clock.read
+
