--- a/05-spring-boot-security/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-auth-server/pom.xml
+++ b/05-spring-boot-security/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-auth-server/pom.xml
@@ -9,12 +9,15 @@
   <name>hello-world-auth-server</name>
   <description>Spring Boot Authorisation Server`</description> 
 	<dependencies>
-	<dependency>
-		<groupId>org.springframework.security</groupId>
-		<artifactId>spring-security-oauth2-authorization-server</artifactId>
-		<!-- <version>1.3.1</version>-->
-	</dependency>
-
+<!--	<dependency>-->
+<!--		<groupId>org.springframework.security</groupId>-->
+<!--		<artifactId>spring-security-oauth2-authorization-server</artifactId>-->
+<!--		 <version>1.3.1</version>-->
+<!--	</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+        </dependency>
 	</dependencies>
 	
 	<build>
