clean up comments and unused code

--- a/06-spring-boot-security/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
+++ b/06-spring-boot-security/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
@@ -37,43 +37,19 @@ otel.instrumentation.micrometer.enabled=${ENV_OTEL_INSTRUMENTATION_ENABLED:${OPE
 server.tomcat.mbeanregistry.enabled=${OPEN_TELEMETRY_TOMCAT_ENABLED}
 
 
-
-
-##logging.level.org.springframework.security=trace
-##spring.security.user.name=user1
-##spring.security.user.password=password
-##spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-id=messaging-client
-#spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-id=hello-world-ui
-#spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-secret={noop}secret
-#spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-authentication-methods=client_secret_basic
-#spring.security.oauth2.authorizationserver.client.messaging-client.registration.authorization-grant-types=authorization_code, refresh_token, client_credentials
-##spring.security.oauth2.authorizationserver.client.messaging-client.registration.redirect-uris=http://127.0.0.1:8080/login/oauth2/code/messaging-client-oidc, http://127.0.0.1:8080/authorized
-#spring.security.oauth2.authorizationserver.client.messaging-client.registration.redirect-uris=http://127.0.0.1:8283/login/oauth2/code/messaging-client-oidc, http://127.0.0.1:8283/authorized
-##spring.security.oauth2.authorizationserver.client.messaging-client.registration.post-logout-redirect-uris=http://127.0.0.1:8080/logged-out
-#spring.security.oauth2.authorizationserver.client.messaging-client.registration.post-logout-redirect-uris=http://127.0.0.1:8283/signed-out
-#spring.security.oauth2.authorizationserver.client.messaging-client.registration.scopes=openid, profile, message.read, message.write
-#spring.security.oauth2.authorizationserver.client.messaging-client.require-authorization-consent=true
-
-
-#server.port=9000
-#logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.security=INFO
 logging.level.org.springframework.security.oauth2=DEBUG
-#spring.security.oauth2.authorizationserver.issuer=http://auth-server:9000
+
+# Requires the following entry in C:\Windows\System32\drivers\etc\hosts to map hostname auth-server to 127.0.0.1
+# 127.0.0.1 	auth-server
 spring.security.oauth2.authorizationserver.issuer=http://auth-server:8299
-#spring.security.oauth2.authorizationserver.client.articles-client.registration.client-id=articles-client
+
+#The following props register hello-world-ui as an oauth2 client
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-id=hello-world-ui
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-secret={noop}secret
-#spring.security.oauth2.authorizationserver.client.articles-client.registration.client-name=Articles Client
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-name=hello-world-ui
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-authentication-methods=client_secret_basic
-#spring.security.oauth2.authorizationserver.client.articles-client.registration.authorization-grant-types=authorization_code, refresh_token
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.authorization-grant-types=authorization_code, refresh_token, client_credentials
-#spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.authorization-grant-types=authorization_code, refresh_token
-#spring.security.oauth2.authorizationserver.client.articles-client.registration.redirect-uris=http://127.0.0.1:8080/login/oauth2/code/articles-client-oidc, http://127.0.0.1:8080/authorized
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.redirect-uris=http://127.0.0.1:8283/login/oauth2/code/hello-world-ui-oidc, http://127.0.0.1:8283/authorized
-#spring.security.oauth2.authorizationserver.client.articles-client.registration.scopes=openid, articles.read
-#spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.scopes=openid,  profile, calendar.read, clock.read
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.scopes=openid, calendar.read
-
