--- a/06-using-spring-boot-security-6/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-ui/pom.xml
+++ b/06-using-spring-boot-security-6/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-ui/pom.xml
@@ -9,19 +9,11 @@
   <name>hello-world-ui</name>
   <description>A ui to consume the services</description> 
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>com.zonesoft</groupId>-->
-<!--			<artifactId>hello-world-utils</artifactId>-->
-<!--			<version>0.0.1-SNAPSHOT</version>		-->
-<!--		</dependency>-->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+			<groupId>com.zonesoft</groupId>
+			<artifactId>hello-world-utils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>		
 		</dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-client</artifactId>
-        </dependency>		
 	</dependencies>
 	
 	<build>
