--- a/06-using-spring-boot-security-6/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-services/greeting-service/pom.xml
+++ b/06-using-spring-boot-security-6/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-services/greeting-service/pom.xml
@@ -10,6 +10,11 @@
 	<name>greeting-service</name>
 	<description>A very basic greeting web service</description>
     <dependencies>
+		<dependency>
+			<groupId>com.zonesoft</groupId>
+			<artifactId>hello-world-api-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>			
+		</dependency>		
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
