--- a/06-using-spring-boot-security-6/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-ui/pom.xml
+++ b/06-using-spring-boot-security-6/f-secured-app-and-services-with-oauth/hello-world-modular/hello-world-ui/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>hello-world-utils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>		
 		</dependency>
+		<dependency>
+			<groupId>com.zonesoft</groupId>
+			<artifactId>hello-world-api-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>		
+		</dependency>		
 	</dependencies>
 	
 	<build>
