--- a/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/hello-world-services/greeting-service/pom.xml
+++ b/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/hello-world-services/greeting-service/pom.xml
@@ -12,7 +12,7 @@
     <dependencies>
 		<dependency>
 			<groupId>com.zonesoft</groupId>
-			<artifactId>hello-world-api-client</artifactId>
+			<artifactId>hello-world-api-client-lib</artifactId>
 			<version>0.0.1-SNAPSHOT</version>			
 		</dependency>		
         <dependency>
