--- a/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/hello-world-ui/pom.xml
+++ b/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/hello-world-ui/pom.xml
@@ -11,12 +11,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.zonesoft</groupId>
-			<artifactId>hello-world-utils</artifactId>
+			<artifactId>hello-world-utils-lib</artifactId>
 			<version>0.0.1-SNAPSHOT</version>		
 		</dependency>
 		<dependency>
 			<groupId>com.zonesoft</groupId>
-			<artifactId>hello-world-api-client</artifactId>
+			<artifactId>hello-world-api-client-lib</artifactId>
 			<version>0.0.1-SNAPSHOT</version>		
 		</dependency>		
 	</dependencies>
