--- a/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/pom.xml
+++ b/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/pom.xml
@@ -18,7 +18,7 @@
 		<module>hello-world-ui</module>
 		<module>hello-world-services</module>
 		<module>hello-world-auth-server</module>
-		<module>hello-world-lib</module>
+		<module>hello-world-libs</module>
 	</modules>
 	<properties>
 		<java.version>21</java.version>
