fix issue with using localhost in url

--- a/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/a-sb-authzn-srvr-secured-suite/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -51,14 +51,16 @@ spring.security.oauth2.client.registration.hello-world-ui-oidc.provider=spring
 spring.security.oauth2.client.registration.hello-world-ui-oidc.client-id=hello-world-ui
 spring.security.oauth2.client.registration.hello-world-ui-oidc.client-secret=secret
 spring.security.oauth2.client.registration.hello-world-ui-oidc.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.hello-world-ui-oidc.redirect-uri=http://127.0.0.1:8283/login/oauth2/code/{registrationId}
+#spring.security.oauth2.client.registration.hello-world-ui-oidc.redirect-uri=http://127.0.0.1:8283/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.hello-world-ui-oidc.redirect-uri=http://localhost:8283/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.hello-world-ui-oidc.scope=openid
 spring.security.oauth2.client.registration.hello-world-ui-oidc.client-name=hello-world-ui-oidc
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.provider=spring
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.client-id=hello-world-ui
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.client-secret=secret
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.hello-world-ui-authorization-code.redirect-uri=http://127.0.0.1:8283/authorized
+#spring.security.oauth2.client.registration.hello-world-ui-authorization-code.redirect-uri=http://127.0.0.1:8283/authorized
+spring.security.oauth2.client.registration.hello-world-ui-authorization-code.redirect-uri=http://localhost:8283/authorized
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.scope=calendar.read
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.client-name=hello-world-ui-authorization-code
 spring.security.oauth2.client.provider.spring.issuer-uri=http://auth-server:8299
