ssl enabled for ui app

--- a/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
@@ -51,5 +51,5 @@ spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.cl
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-name=hello-world-ui
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-authentication-methods=client_secret_basic
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.authorization-grant-types=authorization_code, refresh_token, client_credentials
-spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.redirect-uris=http://127.0.0.1:8283/login/oauth2/code/hello-world-ui-oidc, http://127.0.0.1:8283/authorized, http://localhost:8283/login/oauth2/code/hello-world-ui-oidc, http://localhost:8283/authorized
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.redirect-uris=https://127.0.0.1:8283/login/oauth2/code/hello-world-ui-oidc, https://127.0.0.1:8283/authorized, https://localhost:8283/login/oauth2/code/hello-world-ui-oidc, https://localhost:8283/authorized
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.scopes=openid, calendar.read
