added notes to create and use self signed cert

--- a/01-notes/c-create-self-signed-certificate/localhost-cert.config
+++ b/01-notes/c-create-self-signed-certificate/localhost-cert.config
@@ -15,11 +15,11 @@ encrypt_key = no
 default_md = sha256
 
 ## If you don't use `-keyout` in the CLI, this determines the private key filename
-default_keyfile = keycloak.key
+default_keyfile = localhost.key
 
 ## These are values that are used to *distinguish* the certificate, such as the country and organization
 ## These values are normally collected via Q&A prompt in the CLI if config file is not used
-distinguished_name = keycloak_distinguish_name_section
+distinguished_name = localhost_distinguish_name_section
 
 ## Ensures that distinguished_name values will be pulled from this file, as
 ## opposed to prompting the user in the CLI
@@ -28,7 +28,7 @@ prompt = no
 ## Used for extensions to the self-signed cert OpenSSL is going to generate for us
 x509_extensions = x509_extensions_section
 
-[keycloak_distinguish_name_section]
+[localhost_distinguish_name_section]
 ## These are all values that are used to *distinguish* the certificate, such as 
 ## the country and organization
 ## Many of these have shorter keys that should be used for non-prompt values,
@@ -75,11 +75,12 @@ DNS.2 = localhost
 DNS.3 = 127.0.0.1
 DNS.4 = host.docker.internal
 DNS.5 = keycloak-app
-# NB:The ip address assigned to DNS.6 was taken from /etc/resolv.conf on 
+DNS.6 = auth-server
+# NB:The ip address assigned to DNS.7 was taken from /etc/resolv.conf on 
 # windows wsl by executing ` ubuntu2204 run "cat /etc/resolv.conf" `
 # This is the nameserver entry in /etc/resolv.conf and is the ip-address
 # of the docker host on windows
-DNS.6 = 172.22.176.1
+DNS.7 = 172.22.176.1
 
 # Etc.
 # See:
