https enabled for ui and authzn server

--- a/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -53,5 +53,5 @@ server.tomcat.mbeanregistry.enabled=${OPEN_TELEMETRY_TOMCAT_ENABLED}
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.security=INFO
 logging.level.org.springframework.security.oauth2=INFO
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:8299
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth-server:8299
 
