--- a/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -71,4 +71,4 @@ spring.security.oauth2.client.registration.hello-world-ui-authorization-code.aut
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.redirect-uri=https://localhost:8283/authorized
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.scope=calendar.read
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.client-name=hello-world-ui-authorization-code
-spring.security.oauth2.client.provider.spring.issuer-uri=http://auth-server:8299
+spring.security.oauth2.client.provider.spring.issuer-uri=https://auth-server:8299
