--- a/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/b-sb-secured-https-enabled/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.config.import=optional:env.properties
 
 SERVER_PORT=8286
 
+KEY_STORE=../../../certs/localhost.p12
+KEY_STORE_PASSWORD=alligator*001
+KEY_STORE_TYPE=pkcs12
+
 ORGANISATION=zonesoft
 NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=calendar-service
@@ -21,6 +25,10 @@ GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
 server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
+
+server.ssl.key-store=${ENV_KEY_STORE:${KEY_STORE}}
+server.ssl.key-store-password=${ENV_KEY_STORE_PASSWORD:${KEY_STORE_PASSWORD}}
+server.ssl.key-store-type=${ENV_KEY_STORE_TYPE:${KEY_STORE_TYPE}}
 
 spring.application.org=${ENV_ORGANISATION:${ORGANISATION}}
 spring.application.namespace=${ENV_NAMESPACE:${NAMESPACE}}
