updated seeded keycloak-secured-suite exercise directory

--- a/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.config.import=optional:env.properties
 
 SERVER_PORT=8284
 
+KEY_STORE=../../../certs/localhost.p12
+KEY_STORE_PASSWORD=alligator*001
+KEY_STORE_TYPE=pkcs12
+
 ORGANISATION=zonesoft
 NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=greeting-service
@@ -13,14 +17,14 @@ OPEN_TELEMETRY_INSTRUMENTATION_ENABLED=false
 OPEN_TELEMETRY_TOMCAT_ENABLED=false
 OPEN_TELEMETRY_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
-CALENDAR_SERVICE_PROTOCOL=http
+CALENDAR_SERVICE_PROTOCOL=https
 CALENDAR_SERVICE_DOMAIN=localhost
 CALENDAR_SERVICE_PORT=8286
 CALENDAR_SERVICE_PATH=/get-date
 CALENDAR_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 CALENDAR_SERVICE_TYPE=internal
 
-CLOCK_SERVICE_PROTOCOL=http
+CLOCK_SERVICE_PROTOCOL=https
 CLOCK_SERVICE_DOMAIN=localhost
 CLOCK_SERVICE_PORT=8285
 CLOCK_SERVICE_PATH=/get-time
@@ -28,6 +32,10 @@ CLOCK_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 CLOCK_SERVICE_TYPE=internal
 
 server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
+
+server.ssl.key-store=${ENV_KEY_STORE:${KEY_STORE}}
+server.ssl.key-store-password=${ENV_KEY_STORE_PASSWORD:${KEY_STORE_PASSWORD}}
+server.ssl.key-store-type=${ENV_KEY_STORE_TYPE:${KEY_STORE_TYPE}}
 
 spring.application.org=${ENV_GREETING_ORGANISATION:${ORGANISATION}}
 spring.application.namespace=${ENV_GREETING_NAMESPACE:${NAMESPACE}}
@@ -53,5 +61,5 @@ server.tomcat.mbeanregistry.enabled=${OPEN_TELEMETRY_TOMCAT_ENABLED}
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.security=INFO
 logging.level.org.springframework.security.oauth2=INFO
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:8299
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://auth-server:8299
 
