--- a/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.config.import=optional:env.properties
 
 SERVER_PORT=8283
 
+KEY_STORE=../../certs/localhost.p12
+KEY_STORE_PASSWORD=alligator*001
+KEY_STORE_TYPE=pkcs12
+
 ORGANISATION=zonesoft
 NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=hello-world-ui
@@ -13,7 +17,7 @@ OPEN_TELEMETRY_INSTRUMENTATION_ENABLED=false
 OPEN_TELEMETRY_TOMCAT_ENABLED=false
 OPEN_TELEMETRY_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
-GREETING_SERVICE_PROTOCOL=http
+GREETING_SERVICE_PROTOCOL=https
 GREETING_SERVICE_DOMAIN=localhost
 GREETING_SERVICE_PORT=8284
 GREETING_SERVICE_PATH=/greeting
@@ -21,6 +25,10 @@ GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
 server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
+
+server.ssl.key-store=${ENV_KEY_STORE:${KEY_STORE}}
+server.ssl.key-store-password=${ENV_KEY_STORE_PASSWORD:${KEY_STORE_PASSWORD}}
+server.ssl.key-store-type=${ENV_KEY_STORE_TYPE:${KEY_STORE_TYPE}}
 
 spring.application.org=${ENV_UI_ORGANISATION:${ORGANISATION}}
 spring.application.namespace=${ENV_UI_NAMESPACE:${NAMESPACE}}
@@ -52,7 +60,7 @@ spring.security.oauth2.client.registration.hello-world-ui-oidc.client-id=hello-w
 spring.security.oauth2.client.registration.hello-world-ui-oidc.client-secret=secret
 spring.security.oauth2.client.registration.hello-world-ui-oidc.authorization-grant-type=authorization_code
 #spring.security.oauth2.client.registration.hello-world-ui-oidc.redirect-uri=http://127.0.0.1:8283/login/oauth2/code/{registrationId}
-spring.security.oauth2.client.registration.hello-world-ui-oidc.redirect-uri=http://localhost:8283/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.hello-world-ui-oidc.redirect-uri=https://localhost:8283/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.hello-world-ui-oidc.scope=openid
 spring.security.oauth2.client.registration.hello-world-ui-oidc.client-name=hello-world-ui-oidc
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.provider=spring
@@ -60,7 +68,7 @@ spring.security.oauth2.client.registration.hello-world-ui-authorization-code.cli
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.client-secret=secret
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.authorization-grant-type=authorization_code
 #spring.security.oauth2.client.registration.hello-world-ui-authorization-code.redirect-uri=http://127.0.0.1:8283/authorized
-spring.security.oauth2.client.registration.hello-world-ui-authorization-code.redirect-uri=http://localhost:8283/authorized
+spring.security.oauth2.client.registration.hello-world-ui-authorization-code.redirect-uri=https://localhost:8283/authorized
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.scope=calendar.read
 spring.security.oauth2.client.registration.hello-world-ui-authorization-code.client-name=hello-world-ui-authorization-code
-spring.security.oauth2.client.provider.spring.issuer-uri=http://auth-server:8299
+spring.security.oauth2.client.provider.spring.issuer-uri=https://auth-server:8299
