--- a/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/hello-world-auth-server/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.config.import=optional:env.properties
 
 SERVER_PORT=8299
 
+KEY_STORE=../../certs/localhost.p12
+KEY_STORE_PASSWORD=alligator*001
+KEY_STORE_TYPE=pkcs12
+
 ORGANISATION=zonesoft
 NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=hello-world-auth-server
@@ -15,6 +19,10 @@ OPEN_TELEMETRY_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
 
 server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
+
+server.ssl.key-store=${ENV_KEY_STORE:${KEY_STORE}}
+server.ssl.key-store-password=${ENV_KEY_STORE_PASSWORD:${KEY_STORE_PASSWORD}}
+server.ssl.key-store-type=${ENV_KEY_STORE_TYPE:${KEY_STORE_TYPE}}
 
 spring.application.org=${ENV_UI_ORGANISATION:${ORGANISATION}}
 spring.application.namespace=${ENV_UI_NAMESPACE:${NAMESPACE}}
@@ -43,7 +51,7 @@ logging.level.org.springframework.security.oauth2=DEBUG
 
 # Requires the following entry in C:\Windows\System32\drivers\etc\hosts to map hostname auth-server to 127.0.0.1
 # 127.0.0.1 	auth-server
-spring.security.oauth2.authorizationserver.issuer=http://auth-server:8299
+spring.security.oauth2.authorizationserver.issuer=https://auth-server:8299
 
 #The following props register hello-world-ui as an oauth2 client
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-id=hello-world-ui
@@ -51,5 +59,5 @@ spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.cl
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-name=hello-world-ui
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.client-authentication-methods=client_secret_basic
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.authorization-grant-types=authorization_code, refresh_token, client_credentials
-spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.redirect-uris=http://127.0.0.1:8283/login/oauth2/code/hello-world-ui-oidc, http://127.0.0.1:8283/authorized, http://localhost:8283/login/oauth2/code/hello-world-ui-oidc, http://localhost:8283/authorized
+spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.redirect-uris=https://127.0.0.1:8283/login/oauth2/code/hello-world-ui-oidc, https://127.0.0.1:8283/authorized, https://localhost:8283/login/oauth2/code/hello-world-ui-oidc, https://localhost:8283/authorized
 spring.security.oauth2.authorizationserver.client.hello-world-ui.registration.scopes=openid, calendar.read
