remove spring auth server so that it can be replaced with keycloak

--- a/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/pom.xml
+++ b/07-hello-world-suite-with-keycloak/c-keycloak-secured-suite/hello-world-modular/pom.xml
@@ -17,7 +17,7 @@
 	<modules>
 		<module>hello-world-ui</module>
 		<module>hello-world-services</module>
-		<module>hello-world-auth-server</module>
+<!--		<module>hello-world-auth-server</module>-->
 		<module>hello-world-libs</module>
 	</modules>
 	<properties>
