--- a/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-ui-app/pom.xml
+++ b/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-ui-app/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.zonesoft</groupId>
-	<artifactId>get-token-app</artifactId>
+	<artifactId>datetime-ui-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>get-token-app</name>
-	<description>A very basic bare bones spring boot app to get auth token</description>
+	<name>datetime-ui-app</name>
+	<description>A very basic bare bones spring boot app with a UI that consumes datetime services</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -38,14 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.security</groupId>-->
-<!--            <artifactId>spring-security-oauth2-resource-server</artifactId>-->
-<!--        </dependency>		-->
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-    </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
 
 	</dependencies>
 
