--- a/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-services/pom.xml
+++ b/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-services/pom.xml
@@ -42,10 +42,14 @@
 <!--            <groupId>org.springframework.security</groupId>-->
 <!--            <artifactId>spring-security-oauth2-resource-server</artifactId>-->
 <!--        </dependency>		-->
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.codehaus.janino</groupId>
+		    <artifactId>janino</artifactId>
+		</dependency>		
 	</dependencies>
 
 	<build>
