--- a/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-ui-app/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-ui-app/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login
 spring.security.oauth2.client.provider.keycloak.issuer-uri=https://localhost:4499/realms/HelloWorldRealm
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:4499/realms/HelloWorldRealm
 
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.security.oauth2=DEBUG
+logging.level.org.springframework.security=info
+logging.level.org.springframework.security.oauth2=info
