UI integrated securely with services

--- a/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-ui-app/src/main/resources/application.properties
+++ b/07-hello-world-suite-with-keycloak/e-kc-integrated-suite/datetime-ui-app/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8077
 
+date-time-url=http://localhost:8078
+
 spring.security.oauth2.client.registration.keycloak.client-id=hello-world-ui
 spring.security.oauth2.client.registration.keycloak.client-secret=9uqx2F7MzYLGyBp69AWzh9Rp3TagoPCb
 spring.security.oauth2.client.registration.keycloak.client-name=hello_world_client
