--- a/07-oauth-gway-kc/d-sec-kc-rbac/hello-world-suite/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/07-oauth-gway-kc/d-sec-kc-rbac/hello-world-suite/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -65,5 +65,6 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:4499/real
 
 
 
+logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.security.oauth2=DEBUG
+logging.level.org.springframework.web.reactive.function.client=TRACE
