--- a/07-oauth-gway-kc/d-sec-kc-rbac/hello-world-suite/hello-world-libs/hello-world-utils/pom.xml
+++ b/07-oauth-gway-kc/d-sec-kc-rbac/hello-world-suite/hello-world-libs/hello-world-utils/pom.xml
@@ -11,9 +11,9 @@
   <description>General reusable utilties</description>
   <packaging>jar</packaging> 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-webflux</artifactId>-->
+<!--		</dependency>-->
 	</dependencies> 
 </project>
