example to handle routing to ui with default route created

--- a/08-gway-exampes/a-unsec-gway/hello-world-suite/hello-world-services/greeting-service/pom.xml
+++ b/08-gway-exampes/a-unsec-gway/hello-world-suite/hello-world-services/greeting-service/pom.xml
@@ -6,8 +6,8 @@
 		<artifactId>08a-hello-world-services</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>08c-greeting-service</artifactId>
-	<name>08c-greeting-service</name>
+	<artifactId>08a-greeting-service</artifactId>
+	<name>08a-greeting-service</name>
 	<description>A very basic greeting web service</description>
 	<build>
 		<plugins>
