--- a/08-gway-exampes/a-unsec-gway/hello-world-suite/hello-world-services/calendar-service/pom.xml
+++ b/08-gway-exampes/a-unsec-gway/hello-world-suite/hello-world-services/calendar-service/pom.xml
@@ -6,8 +6,8 @@
 		<artifactId>08a-hello-world-services</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>08c-calendar-service</artifactId>
-	<name>08c-calendar-service</name>
+	<artifactId>08a-calendar-service</artifactId>
+	<name>08a-calendar-service</name>
 	<description>A very basic web service to get the current date</description>
 	<build>
 		<plugins>
