--- a/08-gway-exampes/b-default-routing/hello-world-suite/hello-world-services/pom.xml
+++ b/08-gway-exampes/b-default-routing/hello-world-suite/hello-world-services/pom.xml
@@ -2,22 +2,22 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.zonesoft</groupId>
-    <artifactId>08a-hello-world-suite</artifactId>
+    <artifactId>08b-hello-world-suite</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>08a-hello-world-services</artifactId>
+  <artifactId>08b-hello-world-services</artifactId>
   <packaging>pom</packaging>
-  <name>08a-hello-world-servics</name>
+  <name>08b-hello-world-servics</name>
   <description>Services used by other hello world modules</description>
 	<modules>
-		<module>08a-greeting-service</module>
-		<module>08a-clock-service</module>
-		<module>08a-calendar-service</module>
+		<module>08b-greeting-service</module>
+		<module>08b-clock-service</module>
+		<module>08b-calendar-service</module>
 	</modules>
 	<dependencies>
 		<dependency>
 			<groupId>com.zonesoft</groupId>
-			<artifactId>08a-hello-world-utils</artifactId>
+			<artifactId>08b-hello-world-utils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>			
 		</dependency>
 
