added configs to log gateway at trace level

--- a/08-gway-exampes/c-routing-context-path/hello-world-suite/hello-world-gateway/src/main/resources/application.properties
+++ b/08-gway-exampes/c-routing-context-path/hello-world-suite/hello-world-gateway/src/main/resources/application.properties
@@ -18,3 +18,6 @@ server.ssl.key-store=${ENV_KEY_STORE:${KEY_STORE}}
 server.ssl.key-store-password=${ENV_KEY_STORE_PASSWORD:${KEY_STORE_PASSWORD}}
 server.ssl.key-store-type=${ENV_KEY_STORE_TYPE:${KEY_STORE_TYPE}}
 server.http2.enabled=true
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+#logging.level.web=DEBUG
