--- a/08-gway-exampes/c-routing-context-path/hello-world-suite/hello-world-ui/src/main/resources/application.properties
+++ b/08-gway-exampes/c-routing-context-path/hello-world-suite/hello-world-ui/src/main/resources/application.properties
@@ -35,3 +35,6 @@ server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
 
+logging.level.org.springframework.cloud.gateway=TRACE
+server.forward-headers-strategy=framework
+logging.level.web=DEBUG
