--- a/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-services/09b-persons-api/src/main/resources/application.properties
+++ b/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-services/09b-persons-api/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.config.import=optional:env.properties
 
 SERVER_PORT=7075
 
-KEY_STORE=../../../_common/certs/localhost.p12
+KEY_STORE=../../../../../_common/certs/localhost.p12
 KEY_STORE_PASSWORD=alligator*001
 KEY_STORE_TYPE=pkcs12
 
