--- a/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-ui/09b-frontend-sb/src/main/resources/application.properties
+++ b/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-ui/09b-frontend-sb/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 spring.config.import=optional:env.properties
 
 SERVER_PORT=7071
-KEY_STORE=../../../_common/certs/localhost.p12
+KEY_STORE=../../../../../_common/certs/localhost.p12
 KEY_STORE_PASSWORD=alligator*001
 KEY_STORE_TYPE=pkcs12
 
