converted to api only and without any security for development purposes

--- a/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-libs/pom.xml
+++ b/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-libs/pom.xml
@@ -11,6 +11,6 @@
   <packaging>pom</packaging>
 	<modules>
 		<module>09b-persons-general-utils</module>
-		<module>09b-persons-kc-utils</module>
+<!--		<module>09b-persons-kc-utils</module>-->
 	</modules>  
 </project>
