--- a/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-services/09b-persons-api/src/main/resources/application.properties
+++ b/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-services/09b-persons-api/src/main/resources/application.properties
@@ -42,7 +42,7 @@ server.ssl.key-store-password=${ENV_KEY_STORE_PASSWORD:${KEY_STORE_PASSWORD}}
 server.ssl.key-store-type=${ENV_KEY_STORE_TYPE:${KEY_STORE_TYPE}}
 server.http2.enabled=true
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:4499/realms/persons-platform
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:4499/realms/persons-platform
 
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.security=DEBUG
