--- a/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-services/pom.xml
+++ b/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-services/pom.xml
@@ -48,11 +48,11 @@
 			<artifactId>09b-persons-general-utils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>			
 		</dependency>		
-		<dependency>
-			<groupId>com.zonesoft</groupId>
-			<artifactId>09b-persons-kc-utils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>			
-		</dependency>		
+<!--		<dependency>-->
+<!--			<groupId>com.zonesoft</groupId>-->
+<!--			<artifactId>09b-persons-kc-utils</artifactId>-->
+<!--			<version>0.0.1-SNAPSHOT</version>			-->
+<!--		</dependency>		-->
 	</dependencies>	
 	
 	<build>
