--- a/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-gateway/src/main/resources/application.properties
+++ b/09-kc-secured-platform/09b-ui-dataservice-refactor/api-only/09b-persons-platform/09b-persons-gateway/src/main/resources/application.properties
@@ -23,15 +23,15 @@ zonesoft.gateway.route.api-person-uri=https://localhost:7075
 zonesoft.gateway.route.default-path=/**
 zonesoft.gateway.route.default-uri=https://localhost:3443
 
-spring.security.oauth2.client.registration.keycloak.provider=keycloak
-spring.security.oauth2.client.registration.keycloak.client-id=persons_platform_client
-spring.security.oauth2.client.registration.keycloak.client-secret=i9TQpXQ8Hp8ujjRBcDIIufuPq1dv7cvd
-spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
-spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/keycloak
-spring.security.oauth2.client.provider.keycloak.issuer-uri=https://localhost:4499/realms/persons-platform
-spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:4499/realms/persons-platform
+#spring.security.oauth2.client.registration.keycloak.provider=keycloak
+#spring.security.oauth2.client.registration.keycloak.client-id=persons_platform_client
+#spring.security.oauth2.client.registration.keycloak.client-secret=i9TQpXQ8Hp8ujjRBcDIIufuPq1dv7cvd
+#spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
+#spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/keycloak
+#spring.security.oauth2.client.provider.keycloak.issuer-uri=https://localhost:4499/realms/persons-platform
+#spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:4499/realms/persons-platform
 
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.security=DEBUG
