removed js-tryout and reverted to baseline structure for 09b

--- a/09-kc-secured-platform/09b-ui-dataservice-refactor/no-security-platform/09b-persons-platform/pom.xml
+++ b/09-kc-secured-platform/09b-ui-dataservice-refactor/no-security-platform/09b-persons-platform/pom.xml
@@ -16,7 +16,7 @@
   <description>Parent module of the suite of modules that make up the persons platform</description>	
 	<modules>
 		<module>09b-persons-gateway</module>
-<!--		<module>09b-persons-ui</module>-->
+		<module>09b-persons-ui</module>
 		<module>09b-persons-libs</module>
 		<module>09b-persons-services</module>		
 	</modules>
